final tests fix debut