@@ -227,7 +227,7 @@ public class TestPartieDames {
         int[] suiteDesPrisesVoulus = new int[] {22, 12};
         int[] suiteDesDeplacementsVoulus = new int[] {18, 7};
         int indexDeplacement = 0;
-        for (Prise d : listeMeilleursDeplacements.getFirst()) {
+        for (Prise d : listeMeilleursDeplacements.get(0)) {
             assertEquals(d.getPositionPrise(), suiteDesPrisesVoulus[indexDeplacement]);
             assertEquals(d.getPosition(), suiteDesDeplacementsVoulus[indexDeplacement]);
             indexDeplacement++;
@@ -249,7 +249,7 @@ public class TestPartieDames {
         suiteDesDeplacementsVoulus = new int[] {31, 42, 33, 22, 13, 2};
 
         indexDeplacement = 0;
-        for (Prise d : listeMeilleursDeplacements.getFirst()) {
+        for (Prise d : listeMeilleursDeplacements.get(0)) {
             assertEquals(d.getPositionPrise(), suiteDesPrisesVoulus[indexDeplacement]);
             assertEquals(d.getPosition(), suiteDesDeplacementsVoulus[indexDeplacement]);
             indexDeplacement++;
